*Edge*

* Switched integration test runner to use Rack processor instead of CGI [Josh Peek]

* Made AbstractRequest.if_modified_sense return nil if the header could not be parsed [Jamis Buck]

* Added back ActionController::Base.allow_concurrency flag [Josh Peek]

* AbstractRequest.relative_url_root is no longer automatically configured by a HTTP header. It can now be set in your configuration environment with config.action_controller.relative_url_root [Josh Peek]

* Update Prototype to 1.6.0.2 #599 [Patrick Joyce]

* Conditional GET utility methods.  [Jeremy Kemper]
    response.last_modified = @post.updated_at
    response.etag = [:admin, @post, current_user]

    if request.fresh?(response)
      head :not_modified
    else
      # render ...
    end

* All 2xx requests are considered successful [Josh Peek]

* Fixed that AssetTagHelper#compute_public_path shouldn't cache the asset_host along with the source or per-request proc's won't run [DHH]

* Removed config.action_view.cache_template_loading, use config.cache_classes instead [Josh Peek]

* Get buffer for fragment cache from template's @output_buffer [Josh Peek]

* Set config.action_view.warn_cache_misses = true to receive a warning if you perform an action that results in an expensive disk operation that could be cached [Josh Peek]

* Refactor template preloading. New abstractions include Renderable mixins and a refactored Template class [Josh Peek]

* Changed ActionView::TemplateHandler#render API method signature to render(template, local_assigns = {}) [Josh Peek]

* Changed PrototypeHelper#submit_to_remote to PrototypeHelper#button_to_remote to stay consistent with link_to_remote (submit_to_remote still works as an alias) #8994 [clemens]

* Add :recursive option to javascript_include_tag and stylesheet_link_tag to be used along with :all. #480 [Damian Janowski]

* Allow users to disable the use of the Accept header [Michael Koziarski]
