@@ -60,6 +60,18 @@ uses_mocha 'polymorphic URL helpers' do
       edit_polymorphic_url(@article)
     end
 
+    def test_url_helper_prefixed_with_edit_with_url_options
+      @article.save
+      expects(:edit_article_url).with(@article, :param1 => '10')
+      edit_polymorphic_url(@article, :param1 => '10')
+    end
+
+    def test_url_helper_with_url_options
+      @article.save
+      expects(:article_url).with(@article, :param1 => '10')
+      polymorphic_url(@article, :param1 => '10')
+    end
+
     def test_formatted_url_helper
       expects(:formatted_article_url).with(@article, :pdf)
       formatted_polymorphic_url([@article, :pdf])
@@ -67,8 +79,14 @@ uses_mocha 'polymorphic URL helpers' do
 
     def test_format_option
       @article.save
-      expects(:article_url).with(@article, :pdf)
+      expects(:formatted_article_url).with(@article, :pdf)
       polymorphic_url(@article, :format => :pdf)
+    end
+
+    def test_format_option_with_url_options
+      @article.save
+      expects(:formatted_article_url).with(@article, :pdf, :param1 => '10')
+      polymorphic_url(@article, :format => :pdf, :param1 => '10')
     end
 
     def test_id_and_format_option
@@ -147,7 +165,7 @@ uses_mocha 'polymorphic URL helpers' do
     def test_nesting_with_array_containing_singleton_resource_and_format_option
       @tag = Tag.new
       @tag.save
-      expects(:article_response_tag_url).with(@article, @tag, :pdf)
+      expects(:formatted_article_response_tag_url).with(@article, @tag, :pdf)
       polymorphic_url([@article, :response, @tag], :format => :pdf)
     end
 
